tests/basic/check/id/050.pan.out
tests/basic/check/id/050.pan:4:1-4: error: cannot solve constraints of f50