tests/basic/check/id/050.pan
id : (i:ℤ) → { j:ℤ | j = i }

f50 : {v:int|false}
f50 = id 0

